crates/mockql-core/src/graphql/snapshots/operation_field_filter/shared_fragment_across_matched_and_unmatched/mockql_core__graphql__operation_field_filter__tests__exclude_fields@shared_fragment_across_matched_and_unmatched__case1.graphql.snap
---
source: crates/mockql-core/src/graphql/operation_field_filter/mod.rs
input_file: crates/mockql-core/src/graphql/snapshots/operation_field_filter/shared_fragment_across_matched_and_unmatched/case1.graphql
---
query GetProducts {
  topProducts(first: 5) {
    name
  }
  recommendedProducts {
    name
    reviews {
      ...ReviewFields
    }
  }
}

fragment ReviewFields on Review {
  id
  body
  rating
}
